--- a/portfolio-main/templates/form_result.html
+++ b/portfolio-main/templates/form_result.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="stylesheet" href="../static/css/form.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Результаты формы</title>
 </head>
 <body>
     {% block content %}
-    <h1>Спасибо за заполнение формы!</h1>
-    <p>Ваша электронная почта: {{ email }}</p>
-    <p>Ваше имя: {{ text }}</p>
+    &nbsp;
+    <div><center><h1>Спасибо за заполнение формы!</h1></center></div>
+    &nbsp;
+    <div><center><h3>Ваша электронная почта: {{ email }}</h3></center></div>
+    <div><center><h3>Ваше имя: {{ text }}</h3></center></div>
+    &nbsp;
+    <div><center><h3><a href="/">перейти на главную страницу</h3></center></div>
     {% endblock %}
 </body>
 </html>
